--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
     "has-value": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
     "router": "^1.3.4"
   }
 }
